--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+    <style name="Theme.App.Dark.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/colorPrimaryDark</item>
+        <item name="postSplashScreenTheme">@style/Theme.LostAndFound</item>
+        <item name="android:windowSplashScreenBrandingImage">@drawable/splash_branding_light</item>
+        <item name="windowSplashScreenAnimationDuration">2000</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_branding_anim_light</item>
+    </style>
+
+    <style name="Theme.App.Light.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/colorPrimary</item>
         <item name="postSplashScreenTheme">@style/Theme.LostAndFound</item>
-<!--        <item name="android:windowSplashScreenBrandingImage">@drawable/app_branding</item>-->
-        <item name="windowSplashScreenAnimationDuration">2500</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_my_amazing_anim</item>
+        <item name="android:windowSplashScreenBrandingImage">@drawable/splash_branding_dark</item>
+        <item name="windowSplashScreenAnimationDuration">2000</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_branding_anim_dark</item>
     </style>
 </resources>
